--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ body {
     gap: 20%;
     align-items: center;
 }
-.container {
+/* .container {
     max-width: 88.8%;
     margin: auto;
-}
+} */
 
 /* active */
 
